# yew-boids

./: Cargo.toml  README.md  index-d0b10b968b6c798e.css  index.html  index.scss  yew-boids-fbea8f18c604171f.js  yew-boids-fbea8f18c604171f_bg.wasm
.github/workflows/: gh-pages.yml
src/: boid.rs  main.rs  math.rs  settings.rs  simulation.rs  slider.rs
