[package]
name = "yew-boids"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
gloo = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
web-sys = { version = "0.3.58", features = ["HtmlInputElement"] }
yew = "0.19.3"

[profile.release]
lto = "thin"
codegen-units = 1
